--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -3,9 +3,13 @@
 * @created 02.26 류지영
 */
 // 사용예시
+// @import 'assets/styles/global.scss';
 // body {
 //   background-color: $Purple100;
 // }
+:root {
+  $Purple100: #f8f0ff;
+}
 
 $Purple100: #f8f0ff;
 $Purple200: #ecd9ff;
