--- a/src/assets/styles/font.scss
+++ b/src/assets/styles/font.scss
@@ -4,6 +4,7 @@
 */
 
 // 사용예시
+//  @import 'assets/styles/global.scss';
 // .클래스명 {
 //   font-size: $fontSize12;
 //   font-weight: $fontWeightBold
