--- a/src/components/Badge/BadgeElement.module.scss
+++ b/src/components/Badge/BadgeElement.module.scss
@@ -1,3 +1,8 @@
 .badgeElementContainer {
   padding: 0 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: -0.007rem;
+  border-radius: 0.4rem;
 }
