feat: 뱃지 컴포넌트 완성 	modified:   src/App.js 	modified:   src/components/Badge/Badge.jsx 	modified:   src/components/Badge/Badge.module.scss

--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -1,8 +1,31 @@
+@import 'assets/styles/colors.scss';
+
 .badge {
+  display: inline-flex;
   padding: 0 0.8rem;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 2rem;
   letter-spacing: -0.007rem;
   border-radius: 0.4rem;
+}
+
+.other {
+  background: $Orange100;
+  color: $Orange500;
+}
+
+.coworker {
+  background: $Purple100;
+  color: $Purple600;
+}
+
+.family {
+  background: $Green100;
+  color: $Green500;
+}
+
+.friend {
+  background: $Blue100;
+  color: $Blue500;
 }
