--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -1,12 +1,9 @@
-@import 'assets/styles/colors.scss';
+@import 'assets/styles/global.scss';
 
 .badge {
+  @include font12Regular;
   display: inline-flex;
   padding: 0 0.8rem;
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 2rem;
-  letter-spacing: -0.007rem;
   border-radius: 0.4rem;
 }
 
