--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,30 +1,49 @@
 @import 'assets/styles/global.scss';
-
+// 1rem = 10px
 .container {
   display: flex;
   flex-direction: column;
   justify-items: center;
-  width: 384px;
-  height: 280px;
+  width: 38.4rem;
+  height: 28rem;
   flex-shrink: 0;
-  border-radius: 16px;
+  border-radius: 1.6rem;
   background: $White;
   box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
-  padding: 28px 24px;
+  padding: 2.8rem 2.4rem;
+}
 
-  img {
-    width: 56px;
-    height: 56px;
-    border-radius: 100px;
-    border: 1px solid var(--gray-200, #eee);
-    background: var(--white, #fff);
-  }
+.profileBox {
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile {
   display: flex;
-  gap: 14px;
-  margin-bottom: 15px;
+  gap: 1.4rem;
+  margin-bottom: 1.5rem;
+
+  img {
+    width: 5.6rem;
+    height: 5.6rem;
+    border-radius: 100px;
+    border: 1px solid $Grayscale200;
+    background: $White;
+  }
+}
+
+.deleteIcon {
+  width: 4rem;
+  height: 4rem;
+  padding: 0.8rem;
+  border-radius: 6px;
+  border: 1px solid $Grayscale300;
+  background: $White;
+
+  img {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
 
 .profile_detail {
@@ -35,13 +54,13 @@
 }
 
 .profile_name {
-  gap: 3px;
+  gap: 0.3rem;
   display: flex;
   color: $Black;
   font-size: $fontSize20;
   font-weight: $fontWeightRegular;
   font-style: normal;
-  line-height: 24px;
+  line-height: 2.4rem;
 
   p {
     font-weight: $fontWeightBold;
@@ -49,17 +68,17 @@
 }
 
 .text_box {
-  padding-top: 16px;
+  padding-top: 1.6rem;
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 14px;
+  gap: 1.4rem;
   border-top: 1px solid $Grayscale200;
 }
 
 .text {
-  width: 336px;
-  height: 106px;
+  width: 33.6rem;
+  height: 10.6rem;
   flex-shrink: 0;
 
   overflow: hidden;
@@ -71,7 +90,7 @@
   font-size: $fontSize18;
   font-style: normal;
   font-weight: $fontWeightRegular;
-  line-height: 28px;
+  line-height: 2.8rem;
   letter-spacing: -0.18px;
   text-align: start;
 }
@@ -82,6 +101,6 @@
   font-size: $fontSize12;
   font-style: normal;
   font-weight: $fontWeightRegular;
-  line-height: 18px; /* 150% */
+  line-height: 1.8rem;
   letter-spacing: -0.06px;
 }
