--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -6,10 +6,9 @@
   justify-items: center;
   width: 38.4rem;
   height: 28rem;
-  flex-shrink: 0;
   border-radius: 1.6rem;
   background: $White;
-  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
 }
 
@@ -26,8 +25,8 @@
   img {
     width: 5.6rem;
     height: 5.6rem;
-    border-radius: 100px;
-    border: 1px solid $Grayscale200;
+    border-radius: 10rem;
+    border: 0.1rem solid $Grayscale200;
     background: $White;
   }
 }
@@ -36,8 +35,8 @@
   width: 4rem;
   height: 4rem;
   padding: 0.8rem;
-  border-radius: 6px;
-  border: 1px solid $Grayscale300;
+  border-radius: 0.6rem;
+  border: 0.1rem solid $Grayscale300;
   background: $White;
 
   img {
@@ -51,10 +50,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
+  gap: 0.6rem;
 }
 
 .profile_name {
-  gap: 0.3rem;
+  gap: 0.6rem;
   display: flex;
   color: $Black;
   font-size: $fontSize20;
@@ -73,7 +73,7 @@
   flex-direction: column;
   align-items: start;
   gap: 1.4rem;
-  border-top: 1px solid $Grayscale200;
+  border-top: 0.1rem solid $Grayscale200;
 }
 
 .text {
@@ -88,7 +88,6 @@
 
   font-family: Pretendard;
   font-size: $fontSize18;
-  font-style: normal;
   font-weight: $fontWeightRegular;
   line-height: 2.8rem;
   letter-spacing: -0.18px;
