--- a/src/components/Header/HeaderService.module.scss
+++ b/src/components/Header/HeaderService.module.scss
@@ -1,3 +1,4 @@
+@import 'assets/styles/global.scss';
 .headerServiceContainer {
   display: flex;
   justify-content: space-between;
@@ -16,13 +17,42 @@
     gap: 1rem;
     .howManyPerson {
       margin: 0 2.8rem 0 0;
+      display: flex;
       p {
-        color: var(--gray-900, #181818);
+        color: var(--gray-900, $Grayscale900);
         font-size: 1.8rem;
         font-weight: 400;
         line-height: 2.7rem;
         span {
           font-weight: 700;
+        }
+      }
+      .senderProfile {
+        position: relative;
+        display: flex;
+        left: -1.5rem;
+        .senderProfileImg {
+          width: 2.8rem;
+          height: 2.8rem;
+          border-radius: 14rem;
+          margin-right: -1.3rem;
+          border: 1.4px $White solid;
+        }
+        .senderCount {
+          width: 2.8rem;
+          height: 2.8rem;
+          border-radius: 14rem;
+          margin-right: -1.3rem;
+
+          border: 1px #e3e3e3 solid;
+          background-color: $White;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.2rem;
+          font-weight: 500;
+          line-height: 18px;
+          color: #484848;
         }
       }
     }
@@ -34,26 +64,29 @@
     .headerEmoji {
       display: flex;
       margin: 0 0 0 2.8rem;
+      gap: 0.8rem;
       .emojiBtn {
-        display: flex;
+        display: inline-flex;
         padding: 8px 12px;
         flex-direction: column;
+        justify-content: flex-start;
         align-items: flex-start;
         gap: 10px;
-        border-radius: 32px;
-        background: rgba(0, 0, 0, 0.54);
+        border-radius: 3.2rem;
+        background-color: $Grayscale400;
+        border: none;
       }
       .modalIcon {
         border: none;
-        background-color: #ffffff;
+        background-color: $White;
       }
     }
     .addEmojiBtn {
       display: flex;
       align-items: center;
       border-radius: 6px;
-      border: 1px solid var(--gray-300, #ccc);
-      background: var(--white, #fff);
+      border: 1px solid var(--gray-300, $Grayscale300);
+      background-color: $White;
       padding: 6px 16px;
       font-weight: 500;
       font-size: 1.6rem;
@@ -62,8 +95,8 @@
       display: flex;
       align-items: center;
       border-radius: 6px;
-      border: 1px solid var(--gray-300, #ccc);
-      background: var(--white, #fff);
+      border: 1px solid var(--gray-300, $Grayscale300);
+      background: var(--white, $White);
       padding: 6px 16px;
     }
   }
