feat: emojiModal 기능구현

--- a/src/components/Header/HeaderService.module.scss
+++ b/src/components/Header/HeaderService.module.scss
@@ -75,6 +75,7 @@
         border-radius: 3.2rem;
         background-color: $Grayscale400;
         border: none;
+        color: $White;
       }
       .modalIcon {
         border: none;
