--- a/src/components/Header/ShareModal.module.scss
+++ b/src/components/Header/ShareModal.module.scss
@@ -20,6 +20,7 @@
     font-weight: 400;
     line-height: 26px;
     font-size: 1.6rem;
+    border: none;
   }
   .shareUrl {
     width: 13.8rem;
@@ -29,5 +30,6 @@
     font-weight: 400;
     line-height: 26px;
     font-size: 1.6rem;
+    border: none;
   }
 }
