--- a/src/components/Header/EmojiModal.module.scss
+++ b/src/components/Header/EmojiModal.module.scss
@@ -1,5 +1,7 @@
+@import 'assets/styles/global.scss';
 .modalContainer {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: fixed;
   z-index: 1;
   right: 53.5rem;
@@ -13,5 +15,23 @@
   height: 13.4rem;
   .closeModal {
     color: red;
+  }
+  .emojiBtnContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+    margin: 2.4rem;
+  }
+  .emojiBtn {
+    display: inline-flex;
+    padding: 8px 12px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 3.2rem;
+    background-color: $Grayscale400;
+    border: none;
+    color: $White;
   }
 }
