style: Modal 스타일 수정

--- a/src/components/Header/EmojiModal.module.scss
+++ b/src/components/Header/EmojiModal.module.scss
@@ -1,6 +1,7 @@
 @import 'assets/styles/global.scss';
 .modalContainer {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   position: fixed;
   z-index: 1;
