--- a/src/components/Header/ShareModal.module.scss
+++ b/src/components/Header/ShareModal.module.scss
@@ -1,6 +1,7 @@
 .shareModalContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   position: fixed;
   z-index: 1;
   right: 28rem;
