--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -1,15 +1,9 @@
 @import 'assets/styles/global.scss';
 .headerServiceContainer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 1.1rem 36rem;
-  .toNickname {
-    font-size: 2.8rem;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: -0.28px;
-  }
+  justify-content: flex-start;
+  margin-right: 72rem;
   .headerRight {
     display: flex;
     justify-content: space-between;
