chore: PullRequest 피드백 반영
1. Modal -> Dropdown 변경
2. 변수명 변경
3. 데이터 예외처리
4. 파일명 변경

--- a/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
@@ -3,10 +3,10 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  position: fixed;
+  position: absolute;
   z-index: 1;
-  right: 53.5rem;
-  top: 12rem;
+  right: 86rem;
+  top: 4rem;
   overflow: auto;
   border-radius: 8px;
   border: 1px solid #b6b6b6;
