--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,12 +1,12 @@
 @import 'assets/styles/global.scss';
 
 .modal {
-  border: 1px solid magenta;
   width: 60rem;
   height: 47.6rem;
   padding: 4rem;
   border-radius: 1.6rem;
   background: $White;
+  box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, 0.08);
 }
 
 .header {
