chore: Toast 컴포넌트에 onClick props 추가 chore: closeButton을 button 요소로 추가 - 나중에 공통 컴포넌트로 교체 예정 chore: 스타일시트 구조 변경 style: closeButton에 스타일 추가 	modified:   src/components/Toast/Toast.jsx 	modified:   src/components/Toast/Toast.module.scss

--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -16,19 +16,24 @@
   display: flex;
   align-items: center;
   gap: 1.2rem;
+
+  .completedIcon {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+
+  .text {
+    @include font16Regular;
+    color: $White;
+  }
 }
 
-.completedIcon {
-  width: 2.4rem;
-  height: 2.4rem;
-}
+.closeButton {
+  background: none;
+  border: none;
 
-.text {
-  @include font16Regular;
-  color: $White;
-}
-
-.closeIcon {
-  width: 2.4rem;
-  height: 2.4rem;
+  .closeIcon {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
