--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,26 +7,26 @@
 
 .basicSet {
   display: flex;
-  gap: 10px;
+  gap: 1rem;
 }
 
 .primaryButton56 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 14px 24px;
+  padding: 1.4rem 2.4rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 12px;
+  gap: 1rem;
+  border-radius: 1.2rem;
   background: var(--Purple-600, #9935ff);
   p {
-    width: 160px;
+    width: 16rem;
     color: var(--white, #fff);
     text-align: center;
     font-size: 18px;
     font-weight: 700;
-    line-height: 28px;
-    letter-spacing: -0.18px;
+    line-height: 2.8rem;
+    letter-spacing: -0.018rem;
   }
 
   &.disabled {
@@ -38,7 +38,7 @@
     background: var(--Purple-700, #861dee);
   }
   &:not(.disabled):focus {
-    border: 2px solid var(--Purple-900, #5603a7);
+    border: 0.2rem solid var(--Purple-900, #5603a7);
     background: var(--Purple-800, #6e0ad1);
   }
   &:not(.disabled):active {
@@ -50,20 +50,20 @@
 .primaryButton40 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 7px 16px;
+  padding: 0.7rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
+  gap: 1rem;
+  border-radius: 0.6rem;
   background: var(--Purple-600, #9935ff);
   p {
-    width: 90px;
+    width: 9rem;
     color: var(--white, #fff);
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px;
-    letter-spacing: -0.16px;
+    line-height: 2.6rem;
+    letter-spacing: -0.016rem;
   }
 
   &.disabled {
@@ -75,7 +75,7 @@
     background: var(--Purple-700, #861dee);
   }
   &:not(.disabled):focus {
-    border: 2px solid var(--Purple-900, #5603a7);
+    border: 0.2rem solid var(--Purple-900, #5603a7);
     background: var(--Purple-800, #6e0ad1);
   }
   &:not(.disabled):active {
@@ -87,21 +87,21 @@
 .secondaryButton40 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 7px 16px;
+  padding: 0.7rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--Purple-600, #9935ff);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--Purple-600, #9935ff);
   background: var(--white, #fff);
   p {
-    width: 90px;
+    width: 9rem;
     color: var(--Purple-700, #861dee);
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px;
-    letter-spacing: -0.16px;
+    line-height: 2.6rem;
+    letter-spacing: -0.016rem;
   }
 
   &.disabled {
@@ -113,21 +113,21 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--Purple-700, #861dee);
+    border: 0.1rem solid var(--Purple-700, #861dee);
     background: var(--Purple-100, #f8f0ff);
     p {
       color: var(--Purple-600, #9935ff);
     }
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--Purple-800, #6e0ad1);
+    border: 0.1rem solid var(--Purple-800, #6e0ad1);
     background: var(--white, #fff);
     p {
       color: #9747ff;
     }
   }
   &:not(.disabled):active {
-    border: 1px solid var(--Purple-800, #6e0ad1);
+    border: 0.1rem solid var(--Purple-800, #6e0ad1);
     background: var(--Purple-100, #f8f0ff);
     p {
       color: var(--Purple-600, #9935ff);
@@ -138,25 +138,25 @@
 .outlinedButton56 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 14px 16px;
+  padding: 1.4rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 12px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 1.2rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
-    width: 160px;
+    width: 16rem;
     color: var(--gray-900, #181818);
     text-align: center;
     font-size: 18px;
     font-weight: 700;
-    line-height: 28px; /* 155.556% */
-    letter-spacing: -0.18px;
+    line-height: 2.8rem; /* 155.556% */
+    letter-spacing: -0.018rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -165,15 +165,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -181,27 +181,27 @@
 .outlinedButton40 {
   @include buttonStyleDelete;
   display: inline-flex;
-  height: 40px;
-  padding: 8px 16px;
+  height: 4rem;
+  padding: 0.8rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
-    width: 90px;
-    height: 24px;
+    width: 9rem;
+    height: 2.4rem;
     color: var(--gray-900, #181818);
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px; /* 162.5% */
-    letter-spacing: -0.16px;
+    line-height: 2.6rem; /* 162.5% */
+    letter-spacing: -0.016rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -210,15 +210,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -226,27 +226,27 @@
 .outlinedSmileButton40 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 8px 16px;
+  padding: 0.8rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
     color: var(--gray-900, #181818);
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px; /* 150% */
-    letter-spacing: -0.16px;
+    line-height: 2.6rem; /* 150% */
+    letter-spacing: -0.016rem;
   }
   svg {
-    width: 24px;
-    height: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -257,15 +257,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -273,26 +273,26 @@
 .outlinedButton36 {
   @include buttonStyleDelete;
   display: inline-flex;
-  height: 36px;
-  padding: 6px 16px;
+  height: 3.6rem;
+  padding: 0.6rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
-    width: 90px;
-    height: 24px;
+    width: 9rem;
+    height: 2.4rem;
     color: var(--gray-900, #181818);
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px; /* 150% */
+    line-height: 2.4rem; /* 150% */
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -301,15 +301,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -317,27 +317,26 @@
 .outlinedSmileButton36 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 6px 16px;
+  padding: 0.6rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 0.4rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
-  cursor: pointer;
   p {
     color: var(--gray-900, #181818);
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 2.4rem;
   }
   svg {
-    width: 24px;
-    height: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -346,15 +345,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -362,27 +361,27 @@
 .outlinedButton28 {
   @include buttonStyleDelete;
   display: inline-flex;
-  height: 28px;
-  padding: 2px 16px;
+  height: 2.8rem;
+  padding: 0.2rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 0.4rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
-    width: 90px;
-    height: 24px;
+    width: 9rem;
+    height: 2.4rem;
     color: var(--gray-900, #181818);
     text-align: center;
     font-size: 14px;
     font-weight: 400;
-    line-height: 20px; /* 142.857% */
-    letter-spacing: -0.07px;
+    line-height: 2rem; /* 142.857% */
+    letter-spacing: -0.007rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -391,15 +390,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -407,27 +406,27 @@
 .outlinedSmileButton28 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 6px 16px;
+  padding: 0.6rem 1.6rem;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 0.4rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   p {
     color: var(--gray-900, #181818);
     font-size: 14px;
     font-weight: 400;
-    line-height: 20px;
-    letter-spacing: -0.07px;
+    line-height: 2rem;
+    letter-spacing: -0.007rem;
   }
   svg {
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     p {
       color: var(--white, #fff);
@@ -436,15 +435,15 @@
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -452,37 +451,37 @@
 .outlinedSingleButton36 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 6px;
+  padding: 0.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   div {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 24px;
-    height: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     cursor: auto;
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
@@ -490,37 +489,37 @@
 .outlinedSingleButton28 {
   @include buttonStyleDelete;
   display: inline-flex;
-  padding: 6px;
+  padding: 0.6rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 6px;
-  border: 1px solid var(--gray-300, #ccc);
+  gap: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--gray-300, #ccc);
   background: var(--white, #fff);
   div {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
   }
 
   &.disabled {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-300, #ccc);
     cursor: auto;
   }
 
   &:not(.disabled):hover {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
   &:not(.disabled):focus {
-    border: 1px solid var(--gray-500, #555);
+    border: 0.1rem solid var(--gray-500, #555);
     background: var(--white, #fff);
   }
   &:not(.disabled):active {
-    border: 1px solid var(--gray-300, #ccc);
+    border: 0.1rem solid var(--gray-300, #ccc);
     background: var(--gray-100, #f6f6f6);
   }
 }
